force-app/main/default/objects/BET_Integration_Setting__mdt/BET_Integration_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This metadata contains Integration Settings for BET Tool</description>
    <label>BET Integration Setting</label>
    <pluralLabel>BET Integration Settings</pluralLabel>
</CustomObject>