force-app/main/default/objects/BET_Integration_Setting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Control integration connection status for the BET tool.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>