force-app/main/default/objects/BET_Integration_Setting__mdt/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <inlineHelpText>Specify Client Id for the specific connected app.</inlineHelpText>
    <label>Client Id</label>
    <type>TextArea</type>
</CustomField>