force-app/main/default/objects/BET_Integration_Setting__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <inlineHelpText>Specify client secret for the specific connected app.</inlineHelpText>
    <label>Client Secret</label>
    <type>TextArea</type>
</CustomField>