force-app/main/default/objects/BET_Integration_Setting__mdt/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <label>Document Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Report</fullName>
                <default>true</default>
                <label>3rd Party Report</label>
            </value>
            <value>
                <fullName>Financial Statement</fullName>
            </value>
            <value>
                <fullName>Tax ID Verify</fullName>
            </value>
            <value>
                <fullName>Tax ID Wavier</fullName>
            </value>
            <value>
                <fullName>Bilingual</fullName>
            </value>
            <value>
                <fullName>Tax ID</fullName>
            </value>
            <value>
                <fullName>Credit Boost Approval</fullName>
            </value>
            <value>
                <fullName>Vessel Report</fullName>
            </value>
            <value>
                <fullName>OFAC IMO Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>