force-app/main/default/objects/BET_Integration_Setting__mdt/fields/Integration_Username__c.field-meta.xml
<CustomField>
    <fullName>Integration_Username__c</fullName>
    <label>Integration Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>