force-app/main/default/objects/BET_Integration_Setting__mdt/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Orbis</fullName>
                <default>true</default>
                <label>Orbis</label>
            </value>
            <value>
                <fullName>Bankers Almanac</fullName>
            </value>
            <value>
                <fullName>VIES</fullName>
            </value>
            <value>
                <fullName>IRS</fullName>
            </value>
            <value>
                <fullName>OFAC</fullName>
            </value>
            <value>
                <fullName>LexisNexis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>