force-app/main/default/objects/BET_Integration_Setting__mdt/fields/URL_Extension__c.field-meta.xml
<CustomField>
    <fullName>URL_Extension__c</fullName>
    <description>This field extends the endpoint URL for the callout.</description>
    <inlineHelpText>Specify Map of URL parameter vs field API Name from where the code can pick the values. You can also specify multiple parameters separated by a semi-colon. 
Example: urlParam1:FieldAPIName1;urlParam2:FieldAPIName2</inlineHelpText>
    <label>URL Extension</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>